tests/valid_inputs/void_func_with_ret.cpp


void void_func() {
    return;
}

int main() {
	void_func();
}
