tests/invalid_inputs/sema/private_method_access.cpp

class C {
	void private_method() {

	}
};

int main() {
	C c;
	c.private_method();
}
